# Generated by Django 5.2.15 on 2026-06-15 22:42

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):
    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="FormularioSocioeconomico",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                (
                    "situacion_laboral",
                    models.CharField(
                        choices=[
                            ("EMPLEADO", "Empleado/a"),
                            ("DESEMPLEADO", "Desempleado/a"),
                            ("INDEPENDIENTE", "Trabajador/a independiente"),
                            ("NO_APLICA", "No aplica"),
                        ],
                        max_length=20,
                        verbose_name="situación laboral",
                    ),
                ),
                (
                    "ingreso_mensual_familiar",
                    models.DecimalField(
                        decimal_places=2,
                        max_digits=12,
                        verbose_name="ingreso mensual familiar (ARS)",
                    ),
                ),
                (
                    "cantidad_familiares",
                    models.PositiveSmallIntegerField(
                        verbose_name="cantidad de miembros del grupo familiar"
                    ),
                ),
                (
                    "situacion_habitacional",
                    models.CharField(
                        choices=[
                            ("PROPIETARIO", "Propietario/a"),
                            ("ALQUILANDO", "Alquilando"),
                            ("PRESTADA", "Vivienda prestada/cedida"),
                            ("OTRO", "Otro"),
                        ],
                        max_length=20,
                        verbose_name="situación habitacional",
                    ),
                ),
                (
                    "tiene_beca_previa",
                    models.BooleanField(
                        default=False, verbose_name="¿posee otra beca actualmente?"
                    ),
                ),
                (
                    "observaciones",
                    models.TextField(blank=True, verbose_name="observaciones adicionales"),
                ),
                ("completado", models.BooleanField(default=False, verbose_name="completado")),
                (
                    "fecha_actualizacion",
                    models.DateTimeField(auto_now=True, verbose_name="última actualización"),
                ),
                (
                    "usuario",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="formulario_socioeconomico",
                        to=settings.AUTH_USER_MODEL,
                        verbose_name="estudiante",
                    ),
                ),
            ],
            options={
                "verbose_name": "formulario socioeconómico",
                "verbose_name_plural": "formularios socioeconómicos",
            },
        ),
    ]
